--- a/skyAmazonClient/skyAmazonClient/skyAmazonClient.csproj
+++ b/skyAmazonClient/skyAmazonClient/skyAmazonClient.csproj
@@ -52,6 +52,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -73,6 +76,20 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MarketplaceWebServiceOrders\MarketplaceWebServiceOrders.csproj">
+      <Project>{6d37ddb3-0d16-47e8-8e8c-139f8931bcdc}</Project>
+      <Name>MarketplaceWebServiceOrders</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MWSClientCsRuntime\MWSClientCsRuntime.csproj">
+      <Project>{e6fc1ee2-37e7-4eb4-828e-f7c6ba446724}</Project>
+      <Name>MWSClientCsRuntime</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\skyCommon\skyCommon.csproj">
+      <Project>{a94f8af4-396d-4684-93ae-748f6ecc0c10}</Project>
+      <Name>skyCommon</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
