--- a/skyAmazonClient/skyCommon/skyCommon.csproj
+++ b/skyAmazonClient/skyCommon/skyCommon.csproj
@@ -30,6 +30,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
@@ -41,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="JsonNewtonsoft.cs" />
     <Compile Include="JsonUtils.cs" />
     <Compile Include="JsonJavaScriptSerializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
