--- a/skyAmazonClient/skyAmazonClient/skyAmazonClient.csproj
+++ b/skyAmazonClient/skyAmazonClient/skyAmazonClient.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entity\BaseResponse.cs" />
+    <Compile Include="Entity\CurrentUserInfo.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
