--- a/skyAmazonClient/skyAmazonClient/skyAmazonClient.csproj
+++ b/skyAmazonClient/skyAmazonClient/skyAmazonClient.csproj
@@ -57,6 +57,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\AccountService.cs" />
+    <Compile Include="Service\OrderAmazonService.cs" />
+    <Compile Include="Service\OrderService.cs" />
     <Compile Include="Service\ShopService.cs" />
     <Compile Include="Service\SysConfigService.cs" />
     <Compile Include="AppConstant.cs" />
