--- a/skyAmazonClient/MWSClientCsRuntime/MWSClientCsRuntime.csproj
+++ b/skyAmazonClient/MWSClientCsRuntime/MWSClientCsRuntime.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>MWSClientCsRuntime</RootNamespace>
     <AssemblyName>MWSClientCsRuntime</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
